# bytepath-clone-rs

./: .gitignore  CLAUDE.md  Cargo.toml
src/: constants.rs  main.rs  states.rs
src/bosses/: components.rs  mod.rs  spawner.rs  systems.rs
src/campaign/: components.rs  data.rs  mod.rs  systems.rs
src/combat/: components.rs  mod.rs  systems.rs
src/enemies/: components.rs  mod.rs  spawner.rs  systems.rs
src/obstacles/: mod.rs  systems.rs
src/pickups/: mod.rs  systems.rs
src/player/: abilities.rs  components.rs  mod.rs  ship_classes.rs  spawn.rs  stat_calc.rs  systems.rs
src/shop/: components.rs  mod.rs  systems.rs  ui.rs
src/skill_tree/: components.rs  data.rs  mod.rs  systems.rs
src/ui/: boss_hud.rs  hud.rs  main_menu.rs  mod.rs  scenario_select.rs  ship_select.rs  skill_tree_ui.rs
src/vfx/: components.rs  mod.rs  particles.rs  systems.rs
src/weapons/: components.rs  mod.rs  systems.rs
